fix(hover) improve window cleaning and hover visibility

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,8 @@ div.omnisearch-pagination-wrapper > .pg-right {
 /* hoverbox */
 .hoverlink {
 	position: fixed;
-	background: transparent;
+	background: #337ab733;
+	border-radius: 4px;
 	z-index: 202;
 }
 
